# aoc_24

./: .gitignore  Cargo.toml  README.md  test.md
.github/: workflowsrust.yml
.github/workflows/: rust.yml
day-01/: README.md
day-01/docs/: challenge.md  challenge_2.md
day-02/: README.md
day-02/docs/: challenge.md  challenge_2.md
day-03/: Cargo.toml  README.md
day-03/docs/: challenge.md  challenge_2.md
day-04/: .gitignore  1  README.md  challenge.md  run.sh
day-04/docs/: challenge.md  challenge_2.md
day-05/: .gitignore  Cargo.toml  README.md  challenge.md
day-05/docs/: challenge.md  challenge_2.md  inverse_captcha.md
day-05/tmp/: log.txt
day-06/: .gitignore  README.md
day-06/docs/: challenge.md  challenge_2.md
day-07/: README.md
day-07/docs/: challenge_2.md  challlenge.md
day-08/: README.md
day-08/docs/: challenge.md  challenge_2.md
day-09/: README.md
day-09/docs/: challenge.md  challenge_2.md
day-10/: README.md
day-10/docs/: challenge.md  challenge_2.md
day-11/: README.md
day-11/docs/: challenge.md  challenge_2.md
day-12/: README.md
day-12/docs/: challenge.md  challenge_2.md
day-13/: Cargo.toml  README.md
day-13/docs/: challenge.md  challenge_2.md
day-14/: Cargo.toml  README.md
day-14/docs/: challenge.md  challenge_2.md
day-15/: .gitignore  README.md
day-15/docs/: challenge.md  challenge_2.md
day-16/: .gitignore  README.md
day-17/: README.md
day-18/: README.md
day-19/: README.md
day-20/: README.md
day-21/: README.md
day-22/: README.md
day-23/: README.md
day-24/: README.md
day-25/: README.md
(+20 files in other folders)
