# This exists to manage the members of this workspace
#
# e.g to run group tests
# cargo test --workspace --all-targets -- --include-ignored
#
# e.g to run benchmarks
# cargo bench --all

[package]
name = "aoc_24"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib/mod.rs"

[workspace]
members = [
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-18",
]

[dependencies]
